Attempting to fix map resizing/panning when sidebar is collapsed

--- a/src/css/sidebar.module.css
+++ b/src/css/sidebar.module.css
@@ -41,6 +41,8 @@
     position: relative;
     outline: none;
     justify-content: flex-end;
+    overflow: auto;
+    display: box;
 }
 
 @media (max-width: 1000px) {
