--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@ ul a.active {
   height: 100vh;
   width: 100%;
   position: relative;
+  visibility: inherit;
+  position: relative;
+  outline: none;
+  overflow: hidden;
 }
 
 .longlat {
